# ludiscan-shared-sdk

./: CMakeLists.txt  Makefile  swagger.json
include/CppRestOpenAPIClient/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
include/CppRestOpenAPIClient/api/: DefaultApi.h  V0Api.h
include/CppRestOpenAPIClient/model/: CreatePlaySessionDto.h  CreateProjectDto.h  CreateUserDto.h  DefaultErrorResponse.h  DefaultSuccessResponse.h  PlayPositionLogDto.h  PlayPositionLogListPostDto.h  PlaySessionResponseDto.h
include/SDK/: BinaryBody.h  SDKCore.h  Utilities.h
src/: SDKCore.cpp
src/CppRestOpenAPIClient/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
src/CppRestOpenAPIClient/api/: DefaultApi.cpp  V0Api.cpp
src/CppRestOpenAPIClient/model/: CreatePlaySessionDto.cpp  CreateProjectDto.cpp  CreateUserDto.cpp  DefaultErrorResponse.cpp  DefaultSuccessResponse.cpp  PlayPositionLogDto.cpp  PlayPositionLogListPostDto.cpp  PlaySessionResponseDto.cpp
src/SDK/: SDKCore.cpp  Utilities.cpp
tests/: CMakeLists.txt  main.cpp
